--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1>Abel Melese</h1>
     <nav class="topnav" id="myTopnav">
       <a href="index.html" class="active">Home</a>
-      <a href="#" target="_blank">Name of project goes here</a>
-      <a href="#" target="_blank">Name of project goes here</a>
-      <a href="#" target="_blank">GitHub</a>
-      <a href="#" target="_blank">LinkedIn</a>
+      <a href="https://abelaethio.github.io/Stylin-with-css/" target="_blank">Stylin' With CSS</a>
+      <a href="https://html-elements.abelmelese.repl.co/" target="_blank">HTML Elements</a>
+      <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/abel-melese-79a01910b/" target="_blank">LinkedIn</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
@@ -31,25 +31,14 @@
     </picture>
     <h2 class="subheader">About Me</h2>
 
-    <p>We'll use this page as a place for links to the work you've done, and stand as an example of how to build a <a
-        href="https://www.liferay.com/resources/l/web-portal" target="_blank">portal</a> page to show our projects.</p>
+    <p>Hello, My name is Abel & i am an aspiring web developer with a strong foundation in HTML, CSS and JavaScript.
+      Proficient in web development
+      frameworks such as React and Angular. Strong problem-solving skills and a passion for creating visually appealing
+      and user-friendly websites. Enthusiastic about staying current with the latest web development trends and best
+      practices. Eager to start my career as a web developer and work on challenging projects that will help me grow and
+      develop my skills.</p>
 
-    <p>Watch this video, <a href="https://www.youtube.com/watch?v=ecw_ugVd81k" target="_blank">How to write a short
-        professional bio</a> and write a few paragraphs that identify your background, skills, goals and
-      accomplishments.</p>
 
-    <p>Replace the pictures named <b>desktop.jpg</b>, <b>tablet.jpg</b> and <b>phone.jpg</b> in the <b>images</b> folder
-      with pictures of yourself, or pictures that represent you.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent hendrerit nec purus non vestibulum. Orci varius
-      natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus ipsum odio, lacinia congue
-      varius in, iaculis eget felis. Proin facilisis dui nec purus viverra, sed tempus risus sollicitudin.</p>
-
-    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce malesuada felis
-      ac dapibus tempus. Nulla in purus id leo finibus consequat quis eget mi. In gravida maximus risus eget
-      scelerisque. In placerat diam ut tellus ullamcorper, eu elementum augue vulputate. Cras ut pretium ante. Sed porta
-      eros vel lobortis gravida. Nullam ultrices justo eget felis pharetra aliquam. Maecenas hendrerit hendrerit
-      facilisis.</p>
 
     <h3>Page Origin</h3>
 
