--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <a href="index.html" class="active">Home</a>
       <a href="https://abelaethio.github.io/Stylin-with-css/" target="_blank">Stylin' With CSS</a>
       <a href="https://html-elements.abelmelese.repl.co/" target="_blank">HTML Elements</a>
+      <a href="https://abelaethio.github.io/selectors/" target="_blank">Selectors</a>
+
+      <a href="https://abelaethio.github.io/css-positioning/" target="_blank">CSS Positioning</a>
+
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/abel-melese-79a01910b/" target="_blank">LinkedIn</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -40,7 +44,8 @@
 
 
 
-    <h3>Page Origin</h3>
+    <h3>
+    </h3>
 
 
 
