--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
 
       <a href="https://abelaethio.github.io/time-of-day/" target="_blank">Time of Day</a>
 
+      <a href="https://abelaethio.github.io/daily-grind/" target="_blank">Daily grind</a>
+
+
+
+
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/abel-melese-79a01910b/" target="_blank">LinkedIn</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
+
     </nav>
   </header>
 
