--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
       <a href="https://abelaethio.github.io/daily-grind/" target="_blank">Daily grind</a>
 
+      <a href="https://abelaethio.github.io/creatures/" target="-blank">Creatures</a>
 
 
 
