--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="https://abelaethio.github.io/daily-grind/" target="_blank">Daily grind</a>
 
       <a href="https://abelaethio.github.io/creatures/" target="-blank">Creatures</a>
-
+      <a href="https://abelaethio.github.io/dom-play/" target="_blank">Dom Play</a>
 
 
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
