--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
       <a href="https://abelaethio.github.io/creatures/" target="-blank">Creatures</a>
       <a href="https://abelaethio.github.io/dom-play/" target="_blank">Dom Play</a>
+      <a href="https://abelaethio.github.io/title-case/" target="_blank">Title Case</a>
 
 
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
