--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <a href="https://abelaethio.github.io/creatures/" target="-blank">Creatures</a>
       <a href="https://abelaethio.github.io/dom-play/" target="_blank">Dom Play</a>
       <a href="https://abelaethio.github.io/title-case/" target="_blank">Title Case</a>
-
+      <a href="https://abelaethio.github.io/looping-forms/" target="_blank">Looping Form</a>
+      <a href="https://abelaethio.github.io/data-processing/" target="_blank">Data Processing</a>
 
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/abel-melese-79a01910b/" target="_blank">LinkedIn</a>
