--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <a href="https://abelaethio.github.io/looping-forms/" target="_blank">Looping Form</a>
       <a href="https://abelaethio.github.io/data-processing/" target="_blank">Data Processing</a>
       <a href="https://abelaethio.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
+      <a href="https://abelaethio.github.io/Guessthenumber/" target="_blank">Guess The Number</a>
 
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/abel-melese-79a01910b/" target="_blank">LinkedIn</a>
