--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://abelaethio.github.io/data-processing/" target="_blank">Data Processing</a>
       <a href="https://abelaethio.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
       <a href="https://abelaethio.github.io/Guessthenumber/" target="_blank">Guess The Number</a>
-      <a href="ajax-quotes-sm23-8.abelmelese.repl.co" target="_blank">Ajax Quotes</a>
+      <a href="https://replit.com/@AbelMelese/ajax-quotes-sm23-8" target="_blank">Ajax Quotes</a>
 
 
       <a href="https://github.com/abelaethio" target="_blank">GitHub</a>
